5.2.2

NEW
    - Add Corruption border to the inventory
    - Add option to show target auras on top

FIXES
    - Add upgrade warning for higher tier cloak orbs


5.2.1

NEW
    - Add Rajani & Uldum Accord rep graphics

FIXES
    - Fix immersive camera for King Phaoris
    - Add warning to unequip cloak to upgrade instead of throwing an error (temp fix)


5.2.0

NEW
    - Added X and Y offset for tooltip if anchor is set to cursor
    - Update for 8.3
    - Added healthprediction to target, target of target, focus and target of focus frame
    - Added healthprediction to healthglobe
    - Added option to set Actionbar fade per Actionbar (Show always, show in combat, show only on mouse over)


5.1.15

NEW
    - Added aggroborder to partyframes
    - Added option the set the Stancebar to the left or right of the Actionbar
    - Added more Battleground HUD's
    - Enhanced durability icon at hero panel 
    - Added timer to scenarios like Chromie

MISCELLANEOUS
    - Settings: Checkboxes now also toggle if click on the text

FIXES
    - Classpowerbar now changes if spec changed
    - If minimap is on top now all icons on the minimap are accessable


5.1.14

NEW
    - Added possibly to show more then one WQ
    - Added possibly to track WQ's
    - Added new skins

FIXES
    - Fix chatframe moving and resizing error


5.1.13

FIXES
    - Fix a loading error when action bars are disabled

5.1.12

NEW
    - Added new skins
    - Added heal prediction to party frames
    - Added casttime to target castbar

5.1.11

NEW
    - Added two new skins

FIXES
    - Fix a lua error with moving lootframe

5.1.10

NEW
    - Make lootframe moveable (if not hooked under mouse)
    - Added a "Skin"-Tab into settings

5.1.9

FIXES
    - Fix a error in ptBR and zhTW local

5.1.8

FIXES
    - Fix a position error with the MultiBarBottomRight

5.1.7

NEW
    - Added custom Loot frame
    - Added custom Gamemenu
    - Added custom Staticpopup
    - Added custom Ghost frame